Updated config files and fixed bug in summarise.

--- a/config/config.sample.hepar2.json
+++ b/config/config.sample.hepar2.json
@@ -14,15 +14,15 @@
         "evaluation": {
             "ROC": [
                 {
-                    "algorithm_id": "winasobs",
+                    "algorithm_id": "winasobs-bdeu",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "asobs",
+                    "algorithm_id": "asobs-bdeu",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "gobnilp",
+                    "algorithm_id": "gobnilp-bde",
                     "curve_variable": "alpha"
                 },
                 {
@@ -30,7 +30,7 @@
                     "curve_variable": "iss"
                 },
                 {
-                    "algorithm_id": "mmhc",
+                    "algorithm_id": "mmhc-mi",
                     "curve_variable": "alpha"
                 },
                 {
@@ -38,23 +38,23 @@
                     "curve_variable": "iss"
                 },
                 {
-                    "algorithm_id": "gs",
+                    "algorithm_id": "gs-mi",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "interiamb",
+                    "algorithm_id": "interiamb-mi",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "fci-disc",
+                    "algorithm_id": "fci-chi-square",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "rfci-disc",
+                    "algorithm_id": "rfci-chi-square",
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "gfci-bdeu",
+                    "algorithm_id": "gfci-bdeu-chi-square",
                     "curve_variable": "alpha"
                 },
                 {
@@ -97,6 +97,17 @@
             ]
         },
         "graph": {
+            "DAGavparents": [
+                {
+                    "id": "DAG80",
+                    "av_parents": [
+                        2
+                    ],
+                    "dim": [
+                       80
+                    ]
+                }
+            ],
             "notears": [
                 {
                     "id": "notears",
@@ -132,6 +143,13 @@
                     "mean": 0,
                     "variance": 1
                 }
+            ],
+            "pcalg_sem_params": [
+                {
+                    "id": "SEM",
+                    "min": 0.25,
+                    "max": 1
+                }
             ]
         },
         "structure_learning_algorithms": {
@@ -164,7 +182,7 @@
             ],
             "blip": [
                 {
-                    "id": "winasobs",
+                    "id": "winasobs-bdeu",
                     "scorermethod": "is",
                     "solvermethod": "winasobs",
                     "indeg": 80,
@@ -185,7 +203,7 @@
                     "verbose": 0
                 },
                 {
-                    "id": "asobs",
+                    "id": "asobs-bdeu",
                     "scorermethod": "is",
                     "solvermethod": "asobs",
                     "indeg": 80,
@@ -218,7 +236,7 @@
             ],
             "gobnilp": [
                 {
-                    "id": "gobnilp",
+                    "id": "gobnilp-bde",
                     "plot": false,
                     "palim": 2,
                     "alpha": [
@@ -242,19 +260,6 @@
             ],
             "fges": [
                 {
-                    "id": "fges-cgbic",
-                    "faithfulnessAssumed": true,
-                    "score": "cg-bic-score",
-                    "datatype": "continuous",
-                    "samplePrior": [
-                        1,
-                        10,
-                        50,
-                        100
-                    ],
-                    "structurePrior": 1
-                },
-                {
                     "id": "fges-bdeu",
                     "faithfulnessAssumed": true,
                     "score": "bdeu-score",
@@ -265,25 +270,13 @@
                         50,
                         100
                     ],
-                    "structurePrior": 1
+                    "structurePrior": 1,
+                    "penaltyDiscount": null
                 }
             ],
             "fci": [
                 {
-                    "id": "fci-cont",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45
-                    ],
-                    "test": "cg-lr-test",
-                    "datatype": "continuous"
-                },
-                {
-                    "id": "fci-disc",
+                    "id": "fci-chi-square",
                     "alpha": [
                         0.01,
                         0.05,
@@ -298,7 +291,7 @@
             ],
             "gfci": [
                 {
-                    "id": "gfci-bdeu",
+                    "id": "gfci-bdeu-chi-square",
                     "alpha": [
                         0.01,
                         0.05,
@@ -310,40 +303,13 @@
                     "score": "bdeu-score",
                     "test": "chi-square-test",
                     "datatype": "discrete",
-                    "structurePrior": 1
-                },
-                {
-                    "id": "gfci-cgbic",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45
-                    ],
-                    "score": "cg-bic-score",
-                    "test": "cg-lr-test",
-                    "datatype": "continuous",
-                    "structurePrior": 1
+                    "structurePrior": 1,
+                    "penaltyDiscount": null
                 }
             ],
             "rfci": [
                 {
-                    "id": "rfci-cont",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45
-                    ],
-                    "test": "cg-lr-test",
-                    "datatype": "continuous"
-                },
-                {
-                    "id": "rfci-disc",
+                    "id": "rfci-chi-square",
                     "alpha": [
                         0.01,
                         0.05,
@@ -358,7 +324,7 @@
             ],
             "pcalg": [
                 {
-                    "id": "pcalg-bin",
+                    "id": "pcalg-disCItest",
                     "alpha": [
                         0.01,
                         0.05,
@@ -377,48 +343,12 @@
                     "solveconfl": false,
                     "numCores": 1,
                     "verbose": false,
-                    "indepTest": "binCItest"
-                },
-                {
-                    "id": "pcalg-gauss",
-                    "alpha": [
-                        0.01,
-                        0.05,
-                        0.1,
-                        0.2,
-                        0.35,
-                        0.45,
-                        0.5
-                    ],
-                    "NAdelete": true,
-                    "mmax": "Inf",
-                    "u2pd": "relaxed",
-                    "skelmethod": "stable",
-                    "conservative": false,
-                    "majrule": false,
-                    "solveconfl": false,
-                    "numCores": 1,
-                    "verbose": false,
-                    "indepTest": "gaussCItest"
-                },
-                {
-                    "id": "pcalg005-bin",
-                    "alpha": 0.05,
-                    "NAdelete": true,
-                    "mmax": "Inf",
-                    "u2pd": "relaxed",
-                    "skelmethod": "stable",
-                    "conservative": false,
-                    "majrule": false,
-                    "solveconfl": false,
-                    "numCores": 1,
-                    "verbose": false,
-                    "indepTest": "binCItest"
+                    "indepTest": "disCItest"
                 }
             ],
             "mmhc": [
                 {
-                    "id": "mmhc",
+                    "id": "mmhc-mi",
                     "alpha": [
                         0.01,
                         0.05,
@@ -432,7 +362,7 @@
             ],
             "interiamb": [
                 {
-                    "id": "interiamb",
+                    "id": "interiamb-mi",
                     "alpha": [
                         0.01,
                         0.05,
@@ -450,7 +380,7 @@
             ],
             "gs": [
                 {
-                    "id": "gs",
+                    "id": "gs-mi",
                     "alpha": [
                         0.01,
                         0.05,
@@ -507,18 +437,6 @@
                         50,
                         100
                     ],
-                    "issmu": 1,
-                    "l": 5,
-                    "k": 1,
-                    "prior": "uniform",
-                    "beta": 1,
-                    "restart": 0,
-                    "perturb": 1
-                },
-                {
-                    "id": "hc-bge",
-                    "score": "bge",
-                    "iss": 1,
                     "issmu": 1,
                     "l": 5,
                     "k": 1,
